--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DATABASE_URL = "mongodb+srv://pablo:12344321@cluster0.mshrsa4.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL = "mongodb+srv://mzalazar1:marcos1234@cluster0.11cqgzf.mongodb.net/FINAL_BACK_MZ_MCGA?retryWrites=true&w=majority"
