--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
+    "firebase-admin": "^11.10.1",
     "mongoose": "^6.6.3",
     "routers": "^0.1.4"
   },
@@ -22,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/pabloatoledo/MCGA_Parcial01/issues"
   },
-  "homepage": "https://github.com/pabloatoledo/MCGA_Parcial01#readme"
+  "homepage": "https://github.com/pabloatoledo/MCGA_Parcial01#readme",
+  "keywords": []
 }
