--- a/example.env
+++ b/example.env
@@ -1,2 +1,2 @@
-PORT=4000
-DATABASE_URL = "mongodb+srv://pablo:12344321@cluster0.mshrsa4.mongodb.net/?retryWrites=true&w=majority"
+PORT="nro_port"
+DATABASE_URL = "link a mongodb"
